added crud operation for active book without business logic